Fix contents cutoff on medium screens down With other Fix

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -125,7 +125,6 @@ nav {
   @media screen and (max-width: 1000px) {
     margin-left: 1.5rem;
   }
-  
 
   @media screen and (max-width: 500px) {
     font-weight: smaller;
@@ -172,98 +171,96 @@ nav {
   }
 }
 
-.mb-div{
-
+.mb-div {
   @media screen and (max-width: 1000px) {
     margin-left: 1rem;
   }
-  
-  .mb-btns{
+
+  .mb-btns {
     margin: 1rem 0.5rem;
     padding: 0.5rem 1.5rem;
-  
-      @media screen and (max-width: 1000px) {
-        padding: 0.5rem 1.2rem;
-      }
-  
-      @media screen and (max-width: 700px) {
-        font-size: small;
-        margin: 1rem 0.4rem ;
-      }
-  
-      @media screen and (max-width: 430px) {
-        font-size: smaller;
-        margin: 1rem 0.3rem ;
-      } 
 
-      @media screen and (max-width: 360px) {
-        font-size: x-small;
-        margin: 0.8rem 0.3rem ;
+    @media screen and (max-width: 1000px) {
+      padding: 0.5rem 1.2rem;
+    }
 
-      }
-      @media screen and (max-width: 360px) {
-        font-size: xx-small;
-        margin: 0.7rem 0.3rem ;
-      } 
+    @media screen and (max-width: 700px) {
+      font-size: small;
+      margin: 1rem 0.4rem;
+    }
+
+    @media screen and (max-width: 430px) {
+      font-size: smaller;
+      margin: 1rem 0.3rem;
+    }
+
+    @media screen and (max-width: 360px) {
+      font-size: x-small;
+      margin: 0.8rem 0.3rem;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: xx-small;
+      margin: 0.7rem 0.3rem;
+    }
   }
 }
-.dot-btn{
+.dot-btn {
   font-size: 2rem;
   background: none;
   margin-top: 5rem;
   border: none;
-  
-    &:focus{
-      outline: none;
-      box-shadow: none;
-    }
 
-    @media screen and (max-width: 1200px){
-      margin-top: 4.5rem;
-      margin-left: 3rem;
-    }
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
 
-    @media screen and (max-width: 992px){
-      margin-top: 5rem;
-      margin-left: 5rem;
-      font-size: 1.7rem;
-    }
+  @media screen and (max-width: 1200px) {
+    margin-top: 4.5rem;
+    margin-left: 3rem;
+  }
 
-    @media screen and (max-width: 599px){
-      margin-top: 4rem;
-      margin-left: 2.5rem;
-    }
+  @media screen and (max-width: 992px) {
+    margin-top: 5rem;
+    margin-left: 5rem;
+    font-size: 1.7rem;
+  }
 
-    @media screen and (max-width: 400px){
-      margin-left: 3rem;
-      margin-top: 4.5rem;
-    }
+  @media screen and (max-width: 599px) {
+    margin-top: 4rem;
+    margin-left: 2.5rem;
+  }
+
+  @media screen and (max-width: 400px) {
+    margin-left: 3rem;
+    margin-top: 4.5rem;
+  }
 }
 
-.post-content{
-  p{
+.post-content {
+  p {
     @media screen and (max-width: 1000px) {
       font-size: small;
     }
   }
 }
 
-.ham-menu{
+.ham-menu {
   font-size: 2rem;
   border: none;
   color: #207681;
 
-    &:focus{
-      outline: none;
-      box-shadow: none;
-    }
+  &:focus {
+    outline: none;
+    box-shadow: none;
+  }
 
-    @media (max-width: 380px){
-      font-size: x-large;
-    }
-    @media (max-width: 260px){
-      font-size: larger;
-    }
+  @media (max-width: 380px) {
+    font-size: x-large;
+  }
+  @media (max-width: 260px) {
+    font-size: larger;
+  }
 }
 .text-primary {
   font-weight: bold !important;
@@ -290,9 +287,8 @@ nav {
 section {
   padding: 2rem 0;
 
-  @media screen and (max-width: 994px){
+  @media screen and (max-width: 994px) {
     padding: 1rem 0;
-
   }
 }
 
@@ -300,25 +296,23 @@ section {
   width: 260px !important;
   border-radius: 8.21687px;
   margin-bottom: 1rem;
-  
 
   .card {
     width: 100%;
     border: none;
     box-shadow: 0px 2px 15px rgba(33, 33, 52, 0.1);
 
-    @media screen and(max-width:1000px){
+    @media screen and(max-width:1000px) {
       width: 95% !important;
       font-size: medium !important;
     }
   }
 
-  @media screen and(max-width:1000px){
+  @media screen and(max-width:1000px) {
     width: 240px !important;
-    
   }
 
-  @media screen and(max-width:500px){
+  @media screen and(max-width:500px) {
     width: 180px !important;
   }
 }
@@ -365,28 +359,26 @@ textarea {
   padding: 0;
 }
 
-.img2{
+.img2 {
   @media screen and (max-width: 600px) {
-      width: 0.5rem;
-
+    width: 0.5rem;
   }
   @media screen and (max-width: 300px) {
-      width: 0.2rem;
-      // margin-top: -6rem;
-
+    width: 0.2rem;
+    // margin-top: -6rem;
   }
 }
 
-.cards{
+.cards {
   border: none;
   padding: 2rem;
   box-shadow: 0px 2px 15px rgba(33, 33, 52, 0.2);
 
-  @media screen  and (max-width: 500px){
+  @media screen and (max-width: 500px) {
     padding: 1rem 1rem;
   }
 
-  @media screen  and (max-width: 400px){
+  @media screen and (max-width: 400px) {
     padding: 0 1rem;
   }
 }
@@ -460,5 +452,11 @@ textarea {
 .dropdown-toggle {
   &:after {
     display: none !important;
+  }
+}
+
+.pushDownNavBarBottomOnSm {
+  @media screen and (max-width: 991px) {
+    padding-bottom: 7vh;
   }
 }
